--- a/index.html
+++ b/index.html
@@ -5,6 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    </head>
+  <body>
+
+    <header class="header">
+        <nav class="header__menu">
+          <ul class="header__links-list">
+            <li class="header__links-list-item"><a class="header__link header__link_active header__links-list-item_no-bullit" href="#0">главная</a></li>
+            <li class="header__links-list-item"><a class="header__link" href="#0">посмотреть лоты</a></li>
+            <li class="header__links-list-item"><a class="header__link" href="#0">об аукционе</a></li>
+          </ul>
+        </nav>
+        <a class="header__logo">
+          <img class="header__logo-image" src="./images/logo-black.svg" alt="логотип сайта по продаже лотов">
+        </a>
+
+        <address class="address">
+          <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
+        </address>
+
+    </header>
+
+
+
+    <main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <section class="cover"></section>
+      <section class="lots"></section>
+      <section class="about"></section>
+      <section class="footer"></section>
+    </main>
+  </body>
 </html>
