--- a/index.html
+++ b/index.html
@@ -9,32 +9,48 @@
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/style.css">
     </head>
-  <body>
-
-    <header class="header">
+    
+    <body>
+      <header class="header">
         <nav class="header__menu">
           <ul class="header__links-list">
-            <li class="header__links-list-item"><a class="header__link header__link_active header__links-list-item_no-bullit" href="#0">главная</a></li>
-            <li class="header__links-list-item"><a class="header__link" href="#0">посмотреть лоты</a></li>
-            <li class="header__links-list-item"><a class="header__link" href="#0">об аукционе</a></li>
+            <li class="header__links-list-item header__links-list-item_no-bullit">
+              <a  class="header__link header__link_active" href="#0">главная</a>
+                </li>
+            <li class="header__links-list-item"><a class="header__link" href="#0">посмотреть лоты</a>
+               </li>
+            <li class="header__links-list-item"><a class="header__link" href="#0">об аукционе</a>
+               </li>
           </ul>
         </nav>
-        <a class="header__logo">
-          <img class="header__logo-image" src="./images/logo-black.svg" alt="логотип сайта по продаже лотов">
-        </a>
-
-        <address class="address">
-          <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
+         <div class="header__logo">
+            <a href="#0"><img class="header__logo-image" src="./images/logo-black.svg" alt="логотип сайта магазина по"/></a>
+          </div>
+        <address class="address header__address">
+          <p><a href="tel:+9 999 555 5555">+9 999 555 5555</a></p>
+          <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+          <p>наб. Принсенграхт 263-265,<br> Амстердам</p>
         </address>
-
-    </header>
-
-
-
+      </header>
     <main>
 
+    <section class="cover">
+      <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text aligned-text">о<span class="letter-spacing-extended">но</span></span>
+          <span class="aligned-text aligned-text-center">те<span class="letter-spacing-extended">бе</span></span>
+          <span class="aligned-text aligned-text-right">
+          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+        </h1>
+
+        <div class="cover__description">
+          <p class="cover__description-text">Аукцион вещей, вкоторые никто не верил</p>
+          <button class="bet-button" type="button">Сделать ставку</button>
+        </div>
+    </section>
+
+      <section class="lots">
+        
 
 
 
@@ -48,8 +64,27 @@
 
 
 
-      <section class="cover"></section>
-      <section class="lots"></section>
+
+
+
+      </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <section class="about"></section>
       <section class="footer"></section>
     </main>
