new section about

--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
 
+      <section class="about">
+        <div class="about__wrapper_logo">
+        <div class="about__logo">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="черное изображение логотипа">
+        </div>
+      </div>
+        <div class="about__section_info">
+          <h2 class="about__title">Об аукционе</h2>
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+        </div>
+      </section>
+
+      <section class="footer">
 
 
 
@@ -89,16 +103,8 @@
 
 
 
-
-
-
-
-
-
-
-
-      <section class="about"></section>
-      <section class="footer"></section>
+        
+      </section>
     </main>
   </body>
 </html>
