--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/global.css">
@@ -27,7 +27,7 @@
             <a href="#0"><img class="header__logo-image" src="./images/logo-black.svg" alt="логотип сайта магазина по"/></a>
           </div>
         <address class="address header__address">
-          <p><a href="tel:+9 999 555 5555">+9 999 555 5555</a></p>
+          <p><a href="tel:+99995555555">+9 999 555 5555</a></p>
           <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
           <p>наб. Принсенграхт 263-265,<br> Амстердам</p>
         </address>
@@ -39,8 +39,7 @@
         <h1 class="cover__title">
           <span class="aligned-text aligned-text">о<span class="letter-spacing-extended">но</span></span>
           <span class="aligned-text aligned-text-center">те<span class="letter-spacing-extended">бе</span></span>
-          <span class="aligned-text aligned-text-right">
-          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+          <span class="aligned-text aligned-text-right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">Аукцион вещей, вкоторые никто не верил</p>
@@ -89,22 +88,32 @@
       </div>
         <div class="about__section_info">
           <h2 class="about__title">Об аукционе</h2>
+          <div class="about__text">
           <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+        </div>
         </div>
       </section>
 
-      <section class="footer">
-
-
-
-
-
-
-
-
-        
-      </section>
+      <footer class="footer">
+        <address class="address header__address">
+          <p><a href="tel:+99995555555">+9 999 555 5555</a></p>
+          <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+          <p>наб. Принсенграхт 263-265,<br> Амстердам</p>
+        </address>
+        <nav class="footer__menu">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-list-item">главная</li>
+            <li class="footer__menu-list-item footer__menu-link">посмотреть лоты</li>
+            <li class="footer__menu-list-item footer__menu-link">об аукционе</li>
+          </ul>
+        </nav>
+          <ul class="footer__social-list">
+            <li class="footer__social-list-item"><a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/yt.svg" alt="логотип видеосервиса"></a></li>
+            <li class="footer__social-list-item"><a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/vk.svg" alt="логотип социальной сети"></a></li>
+            <li class="footer__social-list-item"><a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/pinterest.svg" alt="логотип принта"></a></li>
+          </ul>
+      </footer>
     </main>
   </body>
 </html>
