--- a/index.html
+++ b/index.html
@@ -9,47 +9,46 @@
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/style.css">
     </head>
-    
     <body>
+
       <header class="header">
         <nav class="header__menu">
           <ul class="header__links-list">
             <li class="header__links-list-item header__links-list-item_no-bullit">
-              <a  class="header__link header__link_active" href="#0">главная</a>
-                </li>
+              <a class="header__link header__link_active" href="#0">главная</a>
+            </li>
             <li class="header__links-list-item"><a class="header__link" href="#0">посмотреть лоты</a>
-               </li>
+            </li>
             <li class="header__links-list-item"><a class="header__link" href="#0">об аукционе</a>
-               </li>
+            </li>
           </ul>
         </nav>
-         <div class="header__logo">
-            <a href="#0"><img class="header__logo-image" src="./images/logo-black.svg" alt="логотип сайта магазина по"/></a>
+        <div class="header__logo">
+          <a href="#0"><img class="header__logo-image" src="./images/logo-black.svg" alt="логотип сайта магазина"/></a>
           </div>
         <address class="address header__address">
-          <p><a href="tel:+99995555555">+9 999 555 5555</a></p>
-          <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
-          <p>наб. Принсенграхт 263-265,<br> Амстердам</p>
+          <a href="tel:+99995555555">+9 999 555 5555</a><br />
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263-265, Амстердам</p>
         </address>
       </header>
-    <main>
 
+    <main>
     <section class="cover">
       <div class="overlay"></div>
-        <h1 class="cover__title">
-          <span class="aligned-text aligned-text">о<span class="letter-spacing-extended">но</span></span>
-          <span class="aligned-text aligned-text-center">те<span class="letter-spacing-extended">бе</span></span>
-          <span class="aligned-text aligned-text-right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
-        </h1>
-        <div class="cover__description">
-          <p class="cover__description-text">Аукцион вещей, вкоторые никто не верил</p>
-          <button class="bet-button" type="button">Сделать ставку</button>
-        </div>
+        <h1 class="cover__title">О<span class="letter-spacing-extended">но</span><span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>     
+        <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+      </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">
+          Аукцион вещей, в которые никто не верил
+        </p>
+        <button class="bet-button">Сделать ставку</button>
+      </div>
     </section>
 
       <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
-
         <ul class="lots__card-list">
           <li class="lots__card-list-item"><a class="card-link" href="#0">
             <article class="card card_type_film">
@@ -58,7 +57,8 @@
               <p class="card__text">Не просто бросил, а ушёл с первой лекции. 
               Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
             </article>
-          </a></li>
+          </a>
+        </li>
 
           <li class="lots__card-list-item"><a class="card-link" href="#0">
             <article class="card card_type_book">
@@ -66,7 +66,8 @@
               <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
               <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
             </article>
-          </a></li>
+          </a>
+        </li>
 
           <li class="lots__card-list-item"><a class="card-link" href="#0">
             <article class="card card_type_picture">
@@ -74,9 +75,10 @@
               <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
               <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
             </article>
-          </a></li>
-        </ul>
+          </a>
+        </li>
 
+        </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
 
@@ -86,13 +88,13 @@
           <img class="about__logo-image" src="./images/logo-white.svg" alt="черное изображение логотипа">
         </div>
       </div>
-        <div class="about__section_info">
-          <h2 class="about__title">Об аукционе</h2>
-          <div class="about__text">
-          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
-        </div>
-        </div>
+          <div class="about__section_info">
+            <h2 class="about__title">Об аукционе</h2>
+               <div class="about__text">
+                <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+                <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+              </div>
+          </div>
       </section>
 
       <footer class="footer">
