--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             </li>
           </ul>
         </nav>
-        <div class="header__logo">
-          <a href="#0"><img class="header__logo-image" src="./images/logo-black.svg" alt="логотип сайта магазина"/></a>
-          </div>
+          <a class="header__logo">
+            <img class="header__logo-image" src="./images/logo-black.svg" alt="логотип сайта магазина"/>
+          </a>
         <address class="address header__address">
-          <a href="tel:+99995555555">+9 999 555 5555</a><br />
+          <a href="tel:+99995555555">+9 999 555 5555</a><br/>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <p>наб. Принсенграхт 263-265, Амстердам</p>
         </address>
@@ -36,8 +36,8 @@
     <main>
     <section class="cover">
       <div class="overlay"></div>
-        <h1 class="cover__title">О<span class="letter-spacing-extended">но</span><span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>     
-        <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+      <h1 class="cover__title">О<span class="letter-spacing-extended">но</span><span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>     
+      <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
       </h1>
       <div class="cover__description">
         <p class="cover__description-text">
@@ -77,17 +77,15 @@
             </article>
           </a>
         </li>
-
         </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
 
       <section class="about">
-        <div class="about__wrapper_logo">
         <div class="about__logo">
           <img class="about__logo-image" src="./images/logo-white.svg" alt="черное изображение логотипа">
         </div>
-      </div>
+
           <div class="about__section_info">
             <h2 class="about__title">Об аукционе</h2>
                <div class="about__text">
@@ -96,26 +94,34 @@
               </div>
           </div>
       </section>
-
+    </main>
       <footer class="footer">
-        <address class="address header__address">
-          <p><a href="tel:+99995555555">+9 999 555 5555</a></p>
-          <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
-          <p>наб. Принсенграхт 263-265,<br> Амстердам</p>
+        <address class="address">
+          <a href="tel:+99995555555">+9 999 555 5555</a><br/>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263-265, Амстердам</p>
         </address>
         <nav class="footer__menu">
           <ul class="footer__menu-list">
-            <li class="footer__menu-list-item">главная</li>
-            <li class="footer__menu-list-item footer__menu-link">посмотреть лоты</li>
-            <li class="footer__menu-list-item footer__menu-link">об аукционе</li>
+            <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active" href="#0">главная</a>
+          </li>
+
+            <li class="footer__menu-list-item footer__menu-link">
+            <a class="footer__menu-link footer__menu-list-item" href="#0">посмотреть лоты</a>
+          </li>
+
+            <li class="footer__menu-list-item footer__menu-link">
+              <a class="footer__menu-link footer__menu-list-item" href="#0">об аукционе</a>
+            </li>
           </ul>
         </nav>
+
           <ul class="footer__social-list">
             <li class="footer__social-list-item"><a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/yt.svg" alt="логотип видеосервиса"></a></li>
             <li class="footer__social-list-item"><a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/vk.svg" alt="логотип социальной сети"></a></li>
             <li class="footer__social-list-item"><a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/pinterest.svg" alt="логотип принта"></a></li>
           </ul>
       </footer>
-    </main>
   </body>
 </html>
