pointer-events: none + opacity rgba channel

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
             <a class="footer__menu-link footer__menu-link_active" href="#0">главная</a>
           </li>
 
-            <li class="footer__menu-list-item footer__menu-link">
-            <a class="footer__menu-link footer__menu-list-item" href="#0">посмотреть лоты</a>
+            <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
           </li>
 
-            <li class="footer__menu-list-item footer__menu-link">
-              <a class="footer__menu-link footer__menu-list-item" href="#0">об аукционе</a>
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link" href="#0">об аукционе</a>
             </li>
           </ul>
         </nav>
